# ME4-TestSimulator

./: .gitignore  README.md  SPEC.md  pyproject.toml  requirements.txt
i18n/: de.json  en.json  manifest.json
macros/: test-recording.json
testsimulator/: __init__.py  autorun.py  cli.py  core.py  i18n.py  player.py  pyauto_workflow.py  recorder.py  schema.py  server.py  webdriver.py
