[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "me4-testsimulator"
version = "0.1.0"
description = "ME4 TestSimulator — Macro-basierter UI-Test-Simulator mit Playwright"
authors = [{ name = "ME4 / Andy Amann", email = "uwe.andreas.amann@outlook.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "playwright>=1.45.0",
    "click>=8.1.0",
    "jsonschema>=4.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-playwright>=0.5",
    "ruff>=0.4",
    "mypy>=1.8",
]
test = [
    "pytest>=8.0",
    "pytest-playwright>=0.5",
]

[project.scripts]
testsimulator = "testsimulator.cli:main"

[tool.setuptools.packages.find]
include = ["testsimulator*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
